bk_ida/gccida/g0/hard_reg_set_here_p
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/hard_reg_set_here_p/src/reload.c:2506:6: error: use of undeclared identifier 'mode_class_0'; did you mean 'mode_class'?
v3 = mode_class_0[*( ( unsigned __int8 *)op0 + 2)] == MODE_COMPLEX_INT 
     ^~~~~~~~~~~~
     mode_class
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/hard_reg_set_here_p/src/machmode.h:52:30: note: 'mode_class' declared here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/hard_reg_set_here_p/src/reload.c:2507:4: error: use of undeclared identifier 'mode_class_0'; did you mean 'mode_class'?
|| mode_class_0[*( ( unsigned __int8 *)op0 + 2)] == MODE_COMPLEX_FLOAT 
   ^~~~~~~~~~~~
   mode_class
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/hard_reg_set_here_p/src/machmode.h:52:30: note: 'mode_class' declared here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
2 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/hard_reg_set_here_p/src/obj/reload.o] Error 1
